<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_guide_sixth"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:id="@id/oauth_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:id="@id/oauth_qq"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_xxlarge"
            android:layout_weight="1.0">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_drawer_oauth_qq"/>

            <TextView
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/selectable_text_color_ab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_large"
                android:text="@string/drawer_login_by_qq_sort"/>
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:id="@id/oauth_sina"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_xxlarge"
            android:layout_weight="1.0">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_drawer_oauth_sina"/>

            <TextView
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/selectable_text_color_ab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_large"
                android:text="@string/drawer_login_by_sina_sort"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:id="@id/goto_world"
        android:background="@drawable/bg_card_button_white"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_xlarge"
        android:layout_marginRight="@dimen/margin_xlarge"
        android:layout_marginBottom="@dimen/margin_xlarge"
        android:minHeight="@dimen/btn_card_height"
        android:layout_above="@id/oauth_layout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_drawer_explore"/>

        <TextView
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/selectable_text_color_gray_deep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_large"
            android:text="@string/goto_world"/>
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:id="@id/guide_item_1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/goto_world">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/guide_logo"/>

        <TextView
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/text_color_white"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/tip_guide_six"/>
    </LinearLayout>
</RelativeLayout>